--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-json": "*",
+        "biscolab/laravel-recaptcha": "^5.1",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.12",
         "laravel/tinker": "^2.5",
-        "tcg/voyager": "^1.4",
-      "ext-json": "*"
+        "tcg/voyager": "^1.4"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.10",
